# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  judge.sh  naive
docs/: misc.md
src/: CMakeLists.txt  main.cpp  naive_simulator.cpp  simulator.cpp
src/include/: naive_simulator.h  simulator.h
src/include/circuits/: bus.h  carray.h  cqueue.h
src/include/config/: constant.h  types.h
src/include/units/: arithmetic_logic_unit.h  base_unit.h  instruction_unit.h  load_store_buffer.h  memory_unit.h  register_file.h  reorder_buffer.h  reservation_station.h
src/include/utils/: utils.h
src/units/: arithmetic_logic_unit.cpp  instruction_unit.cpp  load_store_buffer.cpp  memory_unit.cpp  reorder_buffer.cpp  reservation_station.cpp
src/utils/: utils.cpp
testcases/: config
